# WebCard_single_page_app

./: .gitignore  README.md  default.conf  docker-compose.yml
backend/: Dockerfile  base.py  configs.py  database.py  main.py  pyproject.toml
backend/migrations/: env.py
backend/models/: contact_model.py
backend/respositories/: contact_repository.py
backend/routers/: contact_router.py
backend/schemas/: contact_schemas.py
backend/services/: contact_services.py
frontend/: Dockerfile  README.md  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.vue  main.js
frontend/src/components/: Contact.vue  Footer.vue  Header.vue  Technologies.vue  WorkItem.vue  Works.vue
